welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:2: error: type mismatch;
 found   : Unit
 required: Boolean
	if (negative){
        ^